testData/imports/optimize/redundantImportQualifier.go
package main

import <error descr="Redundant alias">fmt</error> "fmt"

func _() {
  fmt.Println("Hello")
}
